"Bazel Rules for GraalVM"

load(
    "@buildifier_prebuilt//:rules.bzl",
    "buildifier",
)
load(
    "@rules_python//python:pip.bzl",
    pip_requirements = "compile_pip_requirements",
)

package(default_visibility = [
    "@//:__pkg__",
])

exports_files([
    "graalvm_bindist_stamp.txt",
])

pip_requirements(
    name = "python_requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "//:requirements.txt",
    requirements_txt = "//:requirements_lock.txt",
    tags = [
        "manual",
        "requires-network",
    ],
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
        "./bazel-*/*",
    ],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],
)

buildifier(
    name = "buildifier.format",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    tags = ["manual"],
)
