"Bazel Rules for GraalVM"

load(
    "@buildifier_prebuilt//:rules.bzl",
    "buildifier",
)

package(default_visibility = [
    "@//:__pkg__",
])

exports_files([
    "graalvm_bindist_stamp.txt",
])

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
        "./bazel-*/*",
    ],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],
)

buildifier(
    name = "buildifier.format",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    tags = ["manual"],
)
