"Aliases to documentation targets for the package API."

load(
    "@io_bazel_stardoc//stardoc:stardoc.bzl",
    "stardoc",
)
load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

bzl_library(
    name = "repo_tools",
    srcs = [
        "@bazel_tools//tools:bzl_srcs"
    ],
)

stardoc(
    name = "defs",
    out = "defs.md",
    input = "//graalvm:defs.bzl",
    deps = [
        "//graalvm/nativeimage:rules",
        "//internal:tooling",
    ],
)

stardoc(
    name = "repositories",
    out = "repositories.md",
    input = "//graalvm:repositories.bzl",
    deps = [
        "//internal:bindist",
        "//internal:deps",
        "//internal:tooling",
        "//internal:jdk_build_file",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:shell",
        "@bazel_skylib//lib:structs",
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:versions",
    ],
)

stardoc(
    name = "workspace",
    out = "workspace.md",
    input = "//graalvm:workspace.bzl",
    deps = [
        "//internal:deps",
        ":repo_tools",
    ],
)
