"Aliases to documentation targets for the package API."

load(
    "@io_bazel_stardoc//stardoc:stardoc.bzl",
    "stardoc",
)
load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

bzl_library(
    name = "repo_tools",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
)

stardoc(
    name = "defs",
    out = "defs.md",
    input = "//graalvm:defs.bzl",
    deps = [
        "//lib:tooling",
        "//lib/nativeimage:internals",
        "//lib/nativeimage:rules",
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:paths",
    ],
)

stardoc(
    name = "repositories",
    out = "repositories.md",
    input = "//graalvm:repositories.bzl",
    deps = [
        "//lib:bindist",
        "//lib:deps",
        "//lib:jdk_build_file",
        "//lib:tooling",
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:shell",
        "@bazel_skylib//lib:structs",
        "@bazel_skylib//lib:versions",
    ],
)

stardoc(
    name = "workspace",
    out = "workspace.md",
    input = "//graalvm:workspace.bzl",
    deps = [
        ":repo_tools",
        "//lib:deps",
        "//lib:toolchain",
        "//lib:tooling",
    ],
)

stardoc(
    name = "toolchain",
    out = "toolchain.md",
    input = "//graalvm:toolchain.bzl",
    deps = [
        "//lib:toolchain",
    ],
)

stardoc(
    name = "legacy",
    out = "legacy.md",
    input = "//graal:graal.bzl",
    deps = [
        "//lib/nativeimage:internals",
        "//lib/nativeimage:rules",
        "@bazel_skylib//lib:dicts",
    ],
)
