"Aliases to documentation targets for the package API."

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)
load(
    "@io_bazel_stardoc//stardoc:stardoc.bzl",
    "stardoc",
)

bzl_library(
    name = "repo_tools",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
)

stardoc(
    name = "artifacts",
    out = "artifacts.md",
    input = "//graalvm/artifacts:maven.bzl",
    deps = [
        ":repo_tools",
    ],
)

stardoc(
    name = "defs",
    out = "defs.md",
    input = "//graalvm:defs.bzl",
    deps = [
        "//lib/nativeimage:rules",
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:paths",
        "@rules_cc//cc:bzl_srcs",
    ],
)

stardoc(
    name = "repositories",
    out = "repositories.md",
    input = "//graalvm:repositories.bzl",
    deps = [
        "//lib:bindist",
        "//lib:deps",
        "//lib:jdk_build_file",
        "//lib:tooling",
        "@bazel_skylib//lib:new_sets",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:shell",
        "@bazel_skylib//lib:structs",
        "@bazel_skylib//lib:versions",
    ],
)

stardoc(
    name = "workspace",
    out = "workspace.md",
    input = "//graalvm:workspace.bzl",
    deps = [
        ":repo_tools",
        "//lib:deps",
        "//lib:toolchain",
        "//lib:tooling",
    ],
)

stardoc(
    name = "toolchain",
    out = "toolchain.md",
    input = "//graalvm:toolchain.bzl",
    deps = [
        "//lib:toolchain",
    ],
)

stardoc(
    name = "legacy",
    out = "legacy.md",
    input = "//graal:graal.bzl",
    deps = [
        "//lib:tooling",
        "//lib/nativeimage:classic",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
        "@rules_cc//cc:bzl_srcs",
    ],
)
