"Sample bzlmod-style project which uses the GraalVM Rules for Bazel."

module(
    name = "rules_graalvm_bzlmod_sample",
    version = "0.0.1",
)

bazel_dep(
    name = "rules_java",
    version = "6.5.0",
)

bazel_dep(
    name = "rules_graalvm",
    version = "0.9.0",
)

local_path_override(
    module_name = "rules_graalvm",
    path = "../..",
)
