load(
    "@rules_graalvm//graal:graal.bzl",
    "graal_binary",
)
load(
    "@rules_java//java:defs.bzl",
    "java_binary",
    "java_library",
)

package(default_visibility = [
    "//tests:__subpackages__",
])

java_library(
    name = "java",
    srcs = ["Main.java"],
)

java_binary(
    name = "main",
    main_class = "Main",
    runtime_deps = [
        ":java",
    ],
)

graal_binary(
    name = "main-native",
    main_class = "Main",
    deps = [":java"],
)

alias(
    name = "legacy",
    actual = "main-native",
)
