"Rules for generating binaries with the GraalVM `native-image` tool."

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

package(default_visibility = ["//visibility:public"])

exports_files([
    "rules.bzl",
])

bzl_library(
    name = "rules",
    srcs = ["rules.bzl"],
    deps = ["//internal:tooling"],
)
