"Rules for generating binaries with the GraalVM `native-image` tool."

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)
load(
    "@bazel_skylib//rules:common_settings.bzl",
    "string_flag",
)
load(
    "//internal/native_image:settings.bzl",
    "GraalVMLibC",
    "GraalVMCompilerBackend",
    "DEFAULT_BUILD_OPT",
    "DEFAULT_COMPILER",
    "DEFAULT_LIBC",
    "native_image_info",
    "native_image_settings",
)

package(default_visibility = ["//visibility:public"])

exports_files([
    "rules.bzl",
])

string_flag(
    name = "opt",
    values = [
        "0",  # Don't optimize at all.
        "1",  # Tier 1 optimization.
        "2",  # Tier 2 optimization (default).
        "b",  # Build speed optimization.
    ],
    build_setting_default = DEFAULT_BUILD_OPT,
)

string_flag(
    name = "libc",
    values = [
        GraalVMLibC.GLIBC,
        GraalVMLibC.MUSL,
    ],
    build_setting_default = DEFAULT_LIBC,
)

string_flag(
    name = "compiler_backend",
    values = [
        GraalVMCompilerBackend.NATIVE,
        GraalVMCompilerBackend.LLVM,
    ],
    build_setting_default = DEFAULT_COMPILER,
)

native_image_info(
    name = "settings",
    libc = ":libc",
    compiler_backend = ":compiler_backend",
)

native_image_settings(
    name = "defaults",
    opt = DEFAULT_BUILD_OPT,
    libc = DEFAULT_LIBC,
    compiler_backend = DEFAULT_COMPILER,
)
