load(
    "@rules_java//java:defs.bzl",
    "java_library",
)

package(default_visibility = [
    "@//:__subpackages__",
])

java_library(
    name = "testing",
    testonly = True,
    srcs = [
        "NativeTestRunner.java",
        "NativeTestFeature.java",
        "NativeTestLauncher.java",
    ],
    deps = [
        "@maven_gvm//:org_graalvm_sdk_nativeimage",
        "@maven_gvm//:org_graalvm_buildtools_junit_platform_native",
        "@maven_gvm//:org_junit_platform_junit_platform_launcher",
    ],
)
