"Defines toolchain types for GraalVM."

# Toolchain type: `graalvm`
#
# Describes a regular GraalVM toolchain; this type is satisfied by either GraalVM Community Edition
# or a distribution of Oracle GraalVM.
toolchain_type(name = "graalvm")

# Toolchain type: `graalvm_native_image`
#
# Describes a `native-image` binary made available as part of a GraalVM installation of any type.
# This tool may be installed via the GraalVM Updater or provided otherwise.
toolchain_type(name = "graalvm_native_image")
