"Defines toolchain types for GraalVM."

package(default_visibility = ["//visibility:public"])

# Toolchain type: `graalvm`
#
# Describes a regular GraalVM toolchain; this type is satisfied by either GraalVM Community Edition
# or a distribution of Oracle GraalVM.
alias(
    name = "graalvm",
    actual = "//graalvm/toolchain/gvm:toolchain_type",
)
