"Defines settings targets for Native Image builds."

load(
    "@bazel_skylib//rules:common_settings.bzl",
    "string_flag",
)
load(
    "//internal/native_image:settings.bzl",
    "GraalVMLibC",
    "GraalVMCompilerBackend",
    "DEFAULT_LIBC",
    "DEFAULT_COMPILER",
    "native_image_info",
    "native_image_settings",
)

package(default_visibility = [
    "//graalvm/settings/native_image:__pkg__",
    "//graalvm/settings/native_image:__subpackages__",
])

string_flag(
    name = "libc",
    values = [
        GraalVMLibC.GLIBC,
        GraalVMLibC.MUSL,
    ],
    build_setting_default = DEFAULT_LIBC,
)

string_flag(
    name = "compiler_backend",
    values = [
        GraalVMCompilerBackend.NATIVE,
        GraalVMCompilerBackend.LLVM,
    ],
    build_setting_default = DEFAULT_COMPILER,
)

native_image_info(
    name = "settings",
    libc = ":libc",
    compiler_backend = ":compiler_backend",
)

native_image_settings(
    name = "defaults",
    libc = DEFAULT_LIBC,
    compiler_backend = DEFAULT_COMPILER,
)
