"Defines settings targets for Native Image builds."

load(
    "@bazel_skylib//rules:common_settings.bzl",
    "string_flag",
)
load(
    "//internal/native_image:settings.bzl",
    "GraalVMLibC",
    "GraalVMCompilerBackend",
    "DEFAULTS",
    "native_image_info",
    "native_image_settings",
)

package(default_visibility = [
    "//graalvm/settings/native_image:__pkg__",
    "//graalvm/settings/native_image:__subpackages__",
])

string_flag(
    name = "libc",
    values = [
        GraalVMLibC.GLIBC,
        GraalVMLibC.MUSL,
    ],
    build_setting_default = DEFAULTS.LIBC,
)

string_flag(
    name = "compiler_backend",
    values = [
        GraalVMCompilerBackend.NATIVE,
        GraalVMCompilerBackend.LLVM,
    ],
    build_setting_default = DEFAULTS.COMPILER_BACKEND,
)

native_image_info(
    name = "settings",
    libc = ":libc",
    compiler_backend = ":compiler_backend",
)

native_image_settings(
    name = "defaults",
    libc = DEFAULTS.LIBC,
    opt = DEFAULTS.BUILD_OPT,
    compiler_backend = DEFAULTS.COMPILER_BACKEND,
)
