"Bazel library targets for Native Image rules."

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

package(default_visibility = [
    "//lib:__subpackages__",
    "//docs:__subpackages__",
])

bzl_library(
    name = "rules",
    srcs = ["//graalvm/nativeimage:rules.bzl"],
    deps = [
        ":settings",
        "//lib:tooling",
    ],
)

bzl_library(
    name = "settings",
    srcs = ["//internal/native_image:settings.bzl"],
)

bzl_library(
    name = "internals",
    srcs = ["//internal/native_image:rules.bzl"],
    deps = [
        "@bazel_skylib//:lib",
    ],
)
