"Bazel library targets for Native Image rules."

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

package(default_visibility = [
    "//docs:__subpackages__",
    "//lib:__subpackages__",
])

bzl_library(
    name = "rules",
    srcs = ["//graalvm/nativeimage:rules.bzl"],
    deps = [
        ":settings",
        "//lib:tooling",
        "@bazel_skylib//lib:dicts",
    ],
)

bzl_library(
    name = "settings",
    srcs = ["//internal/native_image:settings.bzl"],
)

bzl_library(
    name = "internals",
    srcs = ["//internal/native_image:rules.bzl"],
)

bzl_library(
    name = "toolchain",
    srcs = ["//internal/native_image:toolchain.bzl"],
    deps = [
        "@bazel_skylib//lib:dicts",
    ],
)
