"Bazel library targets for Native Image rules."

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

package(default_visibility = [
    "//docs:__subpackages__",
    "//lib:__subpackages__",
])

bzl_library(
    name = "builder",
    srcs = ["//internal/native_image:builder.bzl"],
)

bzl_library(
    name = "classic",
    srcs = ["//internal/native_image:classic.bzl"],
    deps = [
        ":builder",
        ":common",
    ],
)

bzl_library(
    name = "common",
    srcs = ["//internal/native_image:common.bzl"],
    deps = [
        ":builder",
    ],
)

bzl_library(
    name = "rules",
    srcs = ["//graalvm/nativeimage:rules.bzl"],
    deps = [
        ":common",
        ":internals",
        ":settings",
        "//lib:tooling",
        "@bazel_skylib//lib:dicts",
    ],
)

bzl_library(
    name = "settings",
    srcs = ["//internal/native_image:settings.bzl"],
)

bzl_library(
    name = "internals",
    srcs = ["//internal/native_image:rules.bzl"],
    deps = [
        "@build_bazel_apple_support//:apple_support",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["//internal/native_image:toolchain.bzl"],
    deps = [
        "@bazel_skylib//lib:dicts",
    ],
)
