workspace(name = "rules_graalvm_sample")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository(
    name = "rules_graalvm",
    path = "../../..",
)

http_archive(
    name = "rules_java",
    url = "https://github.com/bazelbuild/rules_java/releases/download/4.0.0/rules_java-4.0.0.tar.gz",
    sha256 = "34b41ec683e67253043ab1a3d1e8b7c61e4e8edefbcad485381328c934d072fe",
)

load("@rules_graalvm//graalvm:workspace.bzl", "rules_graalvm_repositories", "rules_graalvm_toolchains")

rules_graalvm_repositories(omit_rules_java = True)

rules_graalvm_toolchains()

load("@rules_graalvm//graalvm:repositories.bzl", "graalvm_repository")

rules_graalvm_repositories()

graalvm_repository(
    name = "graalvm",
    distribution = "oracle",
    java_version = "20",
    version = "20.0.2",
)
