workspace(name = "rules_graalvm_sample")

# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository(
    name = "rules_graalvm",
    path = "../../..",
)

load("@rules_graalvm//graalvm:workspace.bzl", "register_graalvm_toolchains", "rules_graalvm_repositories")

rules_graalvm_repositories()

register_graalvm_toolchains()

load("@rules_graalvm//graal:graal_bindist.bzl", "graal_bindist_repository")

rules_graalvm_repositories()

graal_bindist_repository(
    name = "graalvm",
    java_version = "11",
    version = "22.1.0",
)
